--- a/src/IdentityApi/appsettings.Development.json
+++ b/src/IdentityApi/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
+    },
+    "OpenTelemetry": {
+      "IncludeFormattedMessage": true,
+      "IncludeScopes": true,
+      "ParseStateValues": true
     }
+  },
+  "ServiceName": "IdentityApi-Cpnucleo",
+  "HistogramAggregation": "explicit",
+  "AspNetCoreInstrumentation": {
+    "RecordException": "true"
   }
 }
