--- a/src/WebApi/appsettings.Development.json
+++ b/src/WebApi/appsettings.Development.json
@@ -1,12 +1,18 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
+    },
+    "OpenTelemetry": {
+      "IncludeFormattedMessage": true,
+      "IncludeScopes": true,
+      "ParseStateValues": true
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=cpnucleo;Minimum Pool Size=10;Maximum Pool Size=10;Multiplexing=true;"
+  "ServiceName": "WebApi-Cpnucleo",
+  "HistogramAggregation": "explicit",
+  "AspNetCoreInstrumentation": {
+    "RecordException": "true"
   },
-  "CreateFakeData": false
+  "CreateFakeData": false  
 }
