--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,21 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information"
-    },
-    "OpenTelemetry": {
-      "IncludeFormattedMessage": true,
-      "IncludeScopes": true,
-      "ParseStateValues": true
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ServiceName": "WebApi-Cpnucleo",
-  "AllowedHosts": "*",
-  "HistogramAggregation": "explicit",
-  "AspNetCoreInstrumentation": {
-    "RecordException": "true"
-  },
-  "Otlp": {
-    "Endpoint": "http://localhost:4317"
-  }
+  "AllowedHosts": "*"
 }
