--- a/src/IdentityApi/appsettings.Development.json
+++ b/src/IdentityApi/appsettings.Development.json
@@ -13,5 +13,11 @@
   "HistogramAggregation": "explicit",
   "AspNetCoreInstrumentation": {
     "RecordException": "true"
+  },
+  "Otlp": {
+    "Endpoint": "http://localhost:4317"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=cpnucleo;Minimum Pool Size=10;Maximum Pool Size=10;Multiplexing=true;"
   }
 }
