--- a/src/WebApi/appsettings.Development.json
+++ b/src/WebApi/appsettings.Development.json
@@ -14,5 +14,11 @@
   "AspNetCoreInstrumentation": {
     "RecordException": "true"
   },
+  "Otlp": {
+    "Endpoint": "http://localhost:4317"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=cpnucleo;Minimum Pool Size=10;Maximum Pool Size=10;Multiplexing=true;"
+  },
   "CreateFakeData": false  
 }
