--- a/src/IdentityApi/appsettings.Development.json
+++ b/src/IdentityApi/appsettings.Development.json
@@ -2,22 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information"
-    },
-    "OpenTelemetry": {
-      "IncludeFormattedMessage": true,
-      "IncludeScopes": true,
-      "ParseStateValues": true
     }
-  },
-  "ServiceName": "IdentityApi-Cpnucleo",
-  "HistogramAggregation": "explicit",
-  "AspNetCoreInstrumentation": {
-    "RecordException": "true"
   },
   "Otlp": {
     "Endpoint": "http://localhost:4317"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=cpnucleo;Minimum Pool Size=10;Maximum Pool Size=10;Multiplexing=true;"
-  }
+  },
+  "CreateFakeData": false  
 }
