--- a/src/IdentityApi/appsettings.json
+++ b/src/IdentityApi/appsettings.json
@@ -3,7 +3,17 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "OpenTelemetry": {
+      "IncludeFormattedMessage": true,
+      "IncludeScopes": true,
+      "ParseStateValues": true
     }
+  },
+  "ServiceName": "Identity-Cpnucleo",
+  "HistogramAggregation": "explicit",
+  "AspNetCoreInstrumentation": {
+    "RecordException": "true"
   },
   "AllowedHosts": "*"
 }
