--- a/.github/workflows/main-release-identityapi.yml
+++ b/.github/workflows/main-release-identityapi.yml
@@ -9,7 +9,7 @@ env:
   AOT: false
   TRIM: false
   EXTRA_OPTIMIZE: false
-  BUILD_CONFIGURATION: Debug  
+  BUILD_CONFIGURATION: Release  
       
 jobs:
   setup-build-test:
