--- a/.github/workflows/main-release-identityapi.yml
+++ b/.github/workflows/main-release-identityapi.yml
@@ -6,9 +6,9 @@ on:
       - main
 
 env:
-  AOT: false
+  AOT: true
   TRIM: false
-  EXTRA_OPTIMIZE: false
+  EXTRA_OPTIMIZE: true
   BUILD_CONFIGURATION: Release  
       
 jobs:
