Feat: Disabled AOT

--- a/.github/workflows/main-release-identityapi.yml
+++ b/.github/workflows/main-release-identityapi.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 env:
-  AOT: true
-  TRIM: false
+  AOT: false
+  TRIM: true
   EXTRA_OPTIMIZE: true
   BUILD_CONFIGURATION: Release  
       
