--- a/compose.yaml
+++ b/compose.yaml
@@ -17,13 +17,17 @@ services:
     container_name: webapi1-cpnucleo
     ports:
       - "5100:8080"
-      
+    networks:
+      - cpnucleo_network
+
   webapi2-cpnucleo:
     <<: *common-api
     image: jonathanperis/cpnucleo-web-api:latest
     container_name: webapi2-cpnucleo
     ports:
       - "5111:8080"
+    networks:
+      - cpnucleo_network
 
   identityapi-cpnucleo:
     <<: *common-api
@@ -31,7 +35,9 @@ services:
     container_name: identityapi-cpnucleo
     ports:
       - "5200:5050"
-
+    networks:
+      - cpnucleo_network
+      
   db:
     image: postgres:16.7
     container_name: db-cpnucleo
@@ -50,6 +56,8 @@ services:
     ports:
       - "5432:5432"      
     command: postgres -c checkpoint_timeout=600 -c max_wal_size=4096 -c synchronous_commit=0 -c fsync=0 -c full_page_writes=0
+    networks:
+      - cpnucleo_network
 
   nginx:
     image: nginx
@@ -62,7 +70,13 @@ services:
       - identityapi-cpnucleo
     ports:
       - "9999:9999"
+    networks:
+      - cpnucleo_network
 
 volumes:
   db-data:
     driver: local
+
+networks:
+  cpnucleo_network:
+    driver: bridge
